Fixing email collector on mobile

--- a/src/styles/components/_button.scss
+++ b/src/styles/components/_button.scss
@@ -1,5 +1,4 @@
 .btn {
-  height: 100%;
   padding: 8px 15px;
 
   border: $border-style;
