--- a/src/styles/components/_input.scss
+++ b/src/styles/components/_input.scss
@@ -1,5 +1,4 @@
 .input {
-  height: 100%;
   padding: 4px 7px;
   min-width: 220px;
   border: $border-style;
